--- a/coloring/templates/coloring/index.html
+++ b/coloring/templates/coloring/index.html
@@ -2,213 +2,42 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  	<title>P3 Coloring</title>
 
-	<script type="text/javascript" src="{% static 'coloring/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'coloring/vendors/paper/paper-full.min.js' %}"></script>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+  <body>	
+    <div class="container">
+      <div class="row">
+        <div class="col-s-2"></div>
+          <div class="col-s-8">
+            <img src="{% static 'coloring/images/waterBottle.JPG' %}" height="1600" width="1000">
+          </div>
+        <div class="col-s-2"></div>
+      </div>
+    </div>
 
-	<style type="text/css">
-		#color-palette {
-			width: 300px;
-			background-color: #f1f1f1;
-			display: flex;
-			flex-wrap: wrap;
-			position: absolute;
-			top: 0;
-		}
+    <div class = "container">
+      <div class="row">
+  <!--       show chosen color -->
+        <div class="col-sm-4">
+          <img src="{% static 'coloring/images/chosenColors.JPG' %}" height="200" width="200">
 
-		.swatch {
-			width: 24px;
-			height: 24px;
-			-moz-border-radius: 12px;
-			-webkit-border-radius: 12px;
-			border-radius: 12px;
-			margin: 3px;
-		}
-
-		#myCanvas {
-			padding-left: 0;
-		    padding-right: 0;
-		    margin-left: auto;
-		    margin-right: auto;
-		    display: block;
-		}
-	</style>
-
-	<script type="text/javascript" canvas="canvas">
-		window.onload = function() {
-			var canvas = document.getElementById('myCanvas');
-
-			// coloring page
-			var mandala = {
-				item: null,
-				lastClicked: null,
-				filePath: '/static/coloring/images/mandala-freepik.svg'
-			};	
-
-			// color palette
-			var cp = {
-				history: ["#000000"], // black selected by default
-				options: [],
-				$container: $('#color-palette')
-			}
-
-			// your rectangle gradient interaction goes in this function
-			// you may also add code outside of the function (e.g., global variables)
-      //Un-comment this when you get gradient circle down
-//   function myGradientInteraction(){
-
-//     // Create a Paper.js path to draw a triangle into it
-//     var tool = new paper.Tool();
-//     var rect = new paper.Path.Rectangle({size: new paper.Size(400, 300), center: paper.view.center, fillColor: 'red'});
-//     tool.onMouseDown = function (event) {
-//       var destination;
-      
-//       var origin;
-      
-//       var first;
-      
-//       var second;
-      
-//       tool.onMouseUp = function (event) {
-//         origin = event.downPoint;
-        
-//         destination = event.point;
-        
-//         second = cp.history[cp.history.length - 2];
-        
-//         first = cp.history[cp.history.length - 1];
-        
-//         rect.fillColor = {
-//           gradient: {
-//             stops: [first, second]
-//           },
-//           origin: origin,
-//           destination: destination
-//         }
-//       }
-//     }
-       
-//    }
-      
-  function myGradientInteraction(){
-    // Create a Paper.js path to draw a triangle into it
-    var tool = new paper.Tool();
-    var rect = new Path.Circle({
-        center: [80, 50],
-        radius: 30,
-        strokeColor: 'black'});    
-    tool.onMouseDown = function (event) {
-      var destination;
-      
-      var origin;
-      
-      var first;
-      
-      var second;
-      
-      tool.onMouseUp = function (event) {
-        origin = event.downPoint;
-        
-        destination = event.point;
-        
-        second = cp.history[cp.history.length - 2];
-        
-        first = cp.history[cp.history.length - 1];
-        
-        rect.fillColor = {
-          gradient: {
-            stops: [first, second]
-          },
-          origin: origin,
-          destination: destination
-        }
-      }
-    }
-       
-   }
-      
-      
-      
-      
-      
-
-			// your custom interaction goes here!
-			// you may replace everything
-			function myCustomInteraction() {
-				var tool = new paper.Tool();
-
-				tool.onMouseDown = function (event) {
-				    var hit = mandala.item.hitTest(event.point, { tolerance: 10, fill: true });
-				    if (hit) {
-				        hit.item.fillColor = cp.history[cp.history.length - 1];
-				    }
-				}
-			}
+        </div>
+        <div class = "col-sm-4">
+          <img src="https://support.apple.com/library/content/dam/edam/applecare/images/en_US/il/ios9-camera-mode-icon.png" height="200" width="250">
+        </div>
+        <div class = "col-sm-4">
+          <br><br><br>
+          <button class="btn btn-info btn-lg" type="button">Back</button>
+          <button class="btn btn-info btn-lg" type="button">Save</button> 
+        </div>
+       </div>
 
 
-			// create a color palette with the given colors
-			function createColorPalette(colors){
 
-				// create a swatch for each color
-				for (var i = colors.length - 1; i >= 0; i--) {
-					var $swatch = $("<div>").css("background-color", colors[i])
-									   .addClass("swatch");
-					$swatch.click(function(){
-						// add color to the color palette history
-					  	cp.history.push($(this).css("background-color"));
-					});
-					cp.$container.append($swatch);
-				}
-			}
 
-			// loads a set of colors from a json to create a color palette
-			function getColorsCreatePalette(){
-				cp.$container.html(" ");
-				$.getJSON('/static/coloring/vendors/material/material-colors.json', function(colors){
-					var keys = Object.keys(colors);
-					for (var i = keys.length - 1; i >= 0; i--) {
-						cp.options.push(colors[keys[i]][500]);
-					}
-					createColorPalette(cp.options);
-				});
-			}
+    </div>
+  
 
-			function init(custom){
-				paper.setup(canvas);
-				getColorsCreatePalette();
-
-				paper.project.importSVG(mandala.filePath, function(item) { 
-					mandala.item = item._children["design-freepik"];
-				    paper.project.insertLayer(0,mandala.item);
-
-				    if (custom) {
-				    	myCustomInteraction();	
-				    } else {
-				    	myGradientInteraction();
-				    }		
-					
-				}); 
-			}
-
-			// To see your myGradientInteraction version visit: 
-			// http://<your url>:8000/coloring/?type=gradient
-			// To see your myCustomInteraction version visit: 
-			// http://<your url>:8000/coloring/
-			var url = window.location.href;
-			if (url.indexOf("gradient") > -1) {
-				init(false);
-			} else {
-				init(true);
-			}
-		}
-	</script>
-</head>
-<body>	
-
-	<canvas id="myCanvas" width="750px" height="750px"></canvas>
-	<div id="color-palette"></div>
-</body>
+<!-- 	<canvas id="myCanvas" width="750px" height="750px"></canvas> -->
+  </body>
 </html>
